# pyteam

./: .gitignore  .pre-commit-config.yaml  SpecialistBackedAgent.ipynb  bumpver.toml  pyproject.toml  requirements.txt
pyteam/: __init__.py  agent_tooling.py  fleet_retrievers.py  fleet_specialists.py
