[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyteam"]

[project]
name = "pyteam"
version = "0.0.1"
description = "networked agent experiment"
authors = [{ name = "Joshua Sundance Bailey" }]
#readme = "README.md"
dependencies = [
    "black",
    "faiss-cpu",
    "fleet-context",
    "langchain",
    "langsmith",
    "mypy",
    "openai",
    "pandas",
    "ruff",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = ["agent", "code-generation", "llm", "langchain"]
requires-python = ">=3.9"
[project.urls]
Homepage = "https://github.com/joshuasundance-swca/pyteam"


[project.optional-dependencies]
dev = [
    "bumpver",
#    "coverage",
#    "coverage-badge",
    "pre-commit",
#    "pytest",
#    "pytest-asyncio",
]

#doc = [
#    "sphinx",
#    "sphinx-rtd-theme",
#]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag_message = "{new_version}"
tag_scope = "default"
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pyteam/__init__.py" = ['__version__ = "{version}"']


[tool.coverage.run]
branch = true
omit = ["*tests/*.py", "pyteam/app.py"]
command_line = "-m pytest"
source = ["pyteam"]

[tool.coverage.report]
show_missing = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"
skip_covered = false
skip_empty = true
title = "pyteam coverage report"
